syntax = "proto3";

package metric;

option go_package = "github.com/NikolosHGW/metric/internal/proto";

message MetricRequest {
    string id = 1;
    string type = 2;
}

message MetricResponse {
    string id = 1;
    string type = 2;
    double value = 3;
    int64 delta = 4;
}

message UpsertMetricRequest {
    repeated Metric metrics = 1;
}

message UpsertMetricResponse {
    repeated Metric metrics = 1;
}

message Metric {
    string id = 1;
    string type = 2;
    double value = 3;
    int64 delta = 4;
}

service MetricService {
    rpc GetMetric(MetricRequest) returns (MetricResponse);
    rpc UpsertMetrics(UpsertMetricRequest) returns (UpsertMetricResponse);
}
